# sisyphusAPI

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: client.py  config.py  elastic.py  logging.py
app/routers/: csvpush.py  dataset.py  metadatapush.py
app/schemas/: config.py  recordgeojson.py
app/utils/: app_exceptions.py  csv_utils.py  get_list_of_app_exceptions_for_frontend.py  ogcarec_utils.py  service_result.py
data/: sample_data.json
data/schema/: metadata_template.json
