[tool.poetry]
name = "sisyphus-api"
version = "0.1.0"
description = "Printing stuff"
authors = ["Antonio Cerciello <antonio.cerciello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-multipart = "^0.0.5"
fastapi-oidc = "^0.0.9"
loguru = "^0.6.0"
uvicorn = "^0.18.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
fastapi = "^0.88.0"
elasticsearch = {extras = ["async"], version = "~8.4.0"}

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
